<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_fragment"
    tools:context=".presentation.ui.AuthFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="28.dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="16.dp" />

        <EditText
            android:id="@+id/mailEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundet_edittext"
            android:hint="@string/hint_text"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColorHint="@color/color_placholder"
            android:textSize="15.sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="16.dp" />

        <EditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundet_edittext"
            android:hint="@string/enter_your_password"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColorHint="@color/color_placholder"
            android:textSize="15.sp" />

        <Button
            android:id="@+id/button_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundet_button"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/text_signIn"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textColor="@color/color_button"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_your_password"
            android:textColor="@color/color_button"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_placholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <ImageButton
                android:id="@+id/button_vk"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/roundet_button_vk"
                android:contentDescription="@string/description_button_VK"
                android:src="@drawable/vector_icon_vk" />

            <ImageButton
                android:id="@+id/button_ok"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/roundet_button_ok"
                android:contentDescription="@string/description_button_OK"
                android:src="@drawable/vector_icon_ok" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>